--- a/styles.css
+++ b/styles.css
@@ -299,6 +299,12 @@ margin-left: 30px;
     margin: 10px 20px 7px 7px; 
 	
 }
+.thecenter {
+	
+	float: center; 
+    margin: 10px 20px 7px 7px; 
+	
+}
 .rightshow
 {
 	
